@@ -235,6 +235,7 @@ import de.uni_freiburg.informatik.ultimate.model.acsl.ast.LoopAnnot;
 import de.uni_freiburg.informatik.ultimate.plugins.generator.cacsl2boogietranslator.ICACSL2BoogieBacktranslatorMapping;
 import de.uni_freiburg.informatik.ultimate.plugins.generator.cacsl2boogietranslator.LTLExpressionExtractor;
 import de.uni_freiburg.informatik.ultimate.plugins.generator.cacsl2boogietranslator.preferences.CACSLPreferenceInitializer.MemoryModel;
+import de.uni_freiburg.informatik.ultimate.util.datastructures.DataStructureUtils;
 import de.uni_freiburg.informatik.ultimate.util.datastructures.relation.Pair;
 
 /**
@@ -342,7 +343,7 @@ public class CHandler {
 
 	private final ExpressionResultTransformer mExprResultTransformer;
 
-	private final Map<String, Integer> mFunctionToIndex;
+	private final Set<String> mFunctions;
 
 	private final Set<IASTNode> mVariablesOnHeap;
 
@@ -371,11 +372,14 @@ public class CHandler {
 
 	private final boolean mIsInLibraryMode;
 
+	private boolean mIsConcurrent;
+	private boolean mHasThreadLocalVars;
+
 	/**
 	 * Constructor for CHandler in pre-run mode.
 	 *
 	 * @param staticObjectsHandler
-	 * @param functionToIndex
+	 * @param functions
 	 * @param set
 	 *
 	 */
@@ -385,8 +389,7 @@ public class CHandler {
 			final LocationFactory locationFactory, final TypeSizes typeSizes,
 			final Set<IASTDeclaration> reachableDeclarations, final ITypeHandler typeHandler,
 			final CTranslationResultReporter reporter, final INameHandler nameHandler,
-			final StaticObjectsHandler staticObjectsHandler, final Map<String, Integer> functionToIndex,
-			final Set<IASTNode> variablesOnHeap) {
+			final StaticObjectsHandler staticObjectsHandler, final Set<String> functions) {
 		mExpressionTranslation = exprTrans;
 		mIsPrerun = true;
 
@@ -403,8 +406,8 @@ public class CHandler {
 		mStaticObjectsHandler = staticObjectsHandler;
 		mFunctionTable = functionTable;
 
-		mFunctionToIndex = new LinkedHashMap<>(functionToIndex);
-		mVariablesOnHeap = new LinkedHashSet<>(variablesOnHeap);
+		mFunctions = new LinkedHashSet<>(functions);
+		mVariablesOnHeap = new LinkedHashSet<>();
 
 		mContract = new ArrayList<>();
 		mInnerMostLoopLabel = new ArrayDeque<>();
@@ -451,7 +454,7 @@ public class CHandler {
 				mDataRaceChecker);
 
 		mPostProcessor = new PostProcessor(mLogger, mExpressionTranslation, mTypeHandler, mReporter, mAuxVarInfoBuilder,
-				mFunctionToIndex, mTypeSizes, mSymbolTable, mStaticObjectsHandler, mSettings, mProcedureManager,
+				mFunctions, mTypeSizes, mSymbolTable, mStaticObjectsHandler, mSettings, mProcedureManager,
 				mMemoryHandler, mInitHandler, mFunctionHandler, this);
 
 		mIsInLibraryMode = false;
@@ -489,7 +492,7 @@ public class CHandler {
 		// reuse these parts of the old CHandler that have state that was created during
 		// the prerun
 		mVariablesOnHeap = prerunCHandler.mVariablesOnHeap;
-		mFunctionToIndex = prerunCHandler.mFunctionToIndex;
+		mFunctions = prerunCHandler.mFunctions;
 		mBacktranslator = prerunCHandler.mBacktranslator;
 		mLocationFactory = prerunCHandler.mLocationFactory;
 
@@ -545,10 +548,36 @@ public class CHandler {
 				procedureManager, mReporter, mTypeSizes, mSymbolTable, mSettings, mExprResultTransformer,
 				mLocationFactory, mTypeHandler, mCExpressionTranslator, mDataRaceChecker);
 		mPostProcessor = new PostProcessor(mLogger, mExpressionTranslation, mTypeHandler, mReporter, mAuxVarInfoBuilder,
-				mFunctionToIndex, mTypeSizes, mSymbolTable, mStaticObjectsHandler, mSettings, procedureManager,
+				mFunctions, mTypeSizes, mSymbolTable, mStaticObjectsHandler, mSettings, procedureManager,
 				mMemoryHandler, mInitHandler, mFunctionHandler, this);
 		mIsInLibraryMode = !prerunCHandler.mProcedureManager.hasProcedure(mSettings.getEntryMethod());
+		copyGlobalsFromPrerun(prerunCHandler.mSymbolTable);
+	}
 
+	private void copyGlobalsFromPrerun(final FlatSymbolTable prerunSymbolTable) {
+		final ASTType pointerType = mTypeHandler.constructPointerType(null);
+		for (final var entry : prerunSymbolTable.getGlobalScope().entrySet()) {
+			final String id = entry.getKey();
+			final SymbolTableValue oldStv = entry.getValue();
+			final IASTNode hook = oldStv.getDeclarationNode();
+			final SymbolTableValue stv;
+			if (mVariablesOnHeap.contains(hook)) {
+				// Create a new pointer value
+				final CDeclaration oldDecl = oldStv.getCDecl();
+				// This is just required for ACSL, so we can ommit the Boogie-declaration and the initializers
+				final CDeclaration newDecl = new CDeclaration(oldDecl.getType(), oldDecl.getName(), null, null, true,
+						oldDecl.getStorageClass(), oldDecl.getBitfieldSize());
+				final String bId = mNameHandler.getUniqueIdentifier(hook, oldDecl.getName(), 1, true, oldDecl.getType(),
+						oldStv.getDeclarationInformation());
+				stv = new SymbolTableValue(bId, null, pointerType, newDecl, oldStv.getDeclarationInformation(), hook,
+						false);
+				addBoogieIdsOfHeapVars(bId);
+			} else {
+				// Copy the old value to the symbol table
+				stv = oldStv;
+			}
+			mSymbolTable.storeCSymbol(hook, id, stv);
+		}
 	}
 
 	/**
@@ -615,9 +644,10 @@ public class CHandler {
 		final ILocation loc = LocationFactory.createIgnoreCLocation();
 
 		// (alex:) new function pointers
+		int offset = 0;
 		final BigInteger functionPointerPointerBaseValue = BigInteger.valueOf(-1);
-		for (final Entry<String, Integer> en : mFunctionToIndex.entrySet()) {
-			final String funcId = SFO.FUNCTION_ADDRESS + en.getKey();
+		for (final String f : mFunctions) {
+			final String funcId = SFO.FUNCTION_ADDRESS + f;
 			final VarList varList = new VarList(loc, new String[] { funcId }, mTypeHandler.constructPointerType(loc));
 			// would unique make sense here?? -- would potentially add lots of axioms
 			mDeclarations.add(new ConstDeclaration(loc, new Attribute[0], false, varList, null, false));
@@ -625,11 +655,12 @@ public class CHandler {
 			final Expression funcIdExpr = ExpressionFactory.constructIdentifierExpression(loc,
 					mTypeHandler.getBoogiePointerType(), funcId, DeclarationInformation.DECLARATIONINFO_GLOBAL);
 
-			final BigInteger offsetValue = BigInteger.valueOf(en.getValue());
+			final BigInteger offsetValue = BigInteger.valueOf(offset);
 			mDeclarations.add(new Axiom(loc, new Attribute[0],
 					ExpressionFactory.newBinaryExpression(loc, BinaryExpression.Operator.COMPEQ, funcIdExpr,
 							mExpressionTranslation.constructPointerForIntegerValues(loc,
 									functionPointerPointerBaseValue, offsetValue))));
+			offset++;
 		}
 
 		mDeclarations.addAll(0, mPostProcessor.postProcess(loc, globalHook));
@@ -668,9 +699,15 @@ public class CHandler {
 		if (!mIsPrerun) {
 			// handle proc. declaration & resolve their transitive modified globals
 			mDeclarations.addAll(mProcedureManager.computeFinalProcedureDeclarations(mMemoryHandler));
-			for (final String functionName : mFunctionHandler.getCalledFunctionsWithoutDefinition()) {
-				mLogger.warn("The function " + functionName
-						+ " is called, but not defined or handled by StandardFunctionHandler.");
+			final Set<String> calledFunctionsWithoutDefinition = mFunctionHandler.getCalledFunctionsWithoutDefinition();
+			if (!calledFunctionsWithoutDefinition.isEmpty()) {
+				final String msg = "The following functions are not defined or handled internally: "
+						+ String.join(", ", calledFunctionsWithoutDefinition);
+				if (mSettings.allowUndefinedFunctions()) {
+					mLogger.warn(msg);
+				} else {
+					throw new UnsupportedSyntaxException(loc, msg);
+				}
 			}
 		}
 
@@ -711,7 +748,16 @@ public class CHandler {
 	}
 
 	public Result visit(final IDispatcher main, final IASTArraySubscriptExpression node) {
-		return mArrayHandler.handleArraySubscriptExpression(main, node);
+		final ILocation loc = mLocationFactory.createCLocation(node);
+		final ExpressionResult array = ((ExpressionResult) main.dispatch(node.getArrayExpression()));
+		final ExpressionResult subscript =
+				mExprResultTransformer.transformDispatchSwitchRexBoolToInt(main, loc, node.getArgument());
+		return handleArraySubscriptExpression(array, subscript, node);
+	}
+
+	public ExpressionResult handleArraySubscriptExpression(final ExpressionResult array,
+			final ExpressionResult subscript, final IASTNode hook) {
+		return mArrayHandler.handleArraySubscriptExpression(array, subscript, hook);
 	}
 
 	public Result visit(final IDispatcher main, final IASTASMDeclaration node) {
@@ -737,8 +783,9 @@ public class CHandler {
 		}
 		case IASTBinaryExpression.op_equals:
 		case IASTBinaryExpression.op_notequals: {
-			final ExpressionResult rl = mExprResultTransformer.transformSwitchRexBoolToInt(leftOperand, loc, node);
-			final ExpressionResult rr = mExprResultTransformer.transformSwitchRexBoolToInt(rightOperand, loc, node);
+			final ExpressionResult rl = mExprResultTransformer.transformDecaySwitchRexBoolToInt(leftOperand, loc, node);
+			final ExpressionResult rr =
+					mExprResultTransformer.transformDecaySwitchRexBoolToInt(rightOperand, loc, node);
 			return mCExpressionTranslator.handleEqualityOperators(loc, node.getOperator(), rl, rr);
 		}
 		case IASTBinaryExpression.op_greaterEqual:
@@ -880,8 +927,7 @@ public class CHandler {
 		final CPrimitive intType = new CPrimitive(CPrimitives.INT);
 		final AuxVarInfo auxvarInfo = mAuxVarInfoBuilder.constructAuxVarInfo(loc, intType,
 				new PrimitiveType(loc, BoogieType.TYPE_BOOL, SFO.BOOL), SFO.AUXVAR.SHORTCIRCUIT);
-		builder.addDeclaration(auxvarInfo.getVarDec());
-		builder.addAuxVar(auxvarInfo);
+		builder.addAuxVarWithDeclaration(auxvarInfo);
 		final RValue auxvarRval = new RValue(auxvarInfo.getExp(), intType, true);
 
 		// add auxvar assignment "#t~SHORT~UID = left"
@@ -1073,24 +1119,24 @@ public class CHandler {
 			final boolean useRValue) {
 		final ExpressionResultBuilder resultBuilder = new ExpressionResultBuilder();
 		LRValue expr = null;
-		final IASTNode parent = node.getParent();
+		final boolean isNewScopeRequired = !(node.getParent() instanceof IASTFunctionDefinition);
 
-		if (isNewScopeRequired(parent)) {
+		if (isNewScopeRequired) {
 			beginScope();
 		}
 
+		Set<AuxVarInfo> auxVars = Set.of();
 		for (final IASTNode child : node.getChildren()) {
 			checkForACSL(main, resultBuilder, child, null, true);
+			resultBuilder.addStatements(CTranslationUtil.createHavocsForAuxVars(auxVars));
 			final Result r = main.dispatch(child);
 			if (r instanceof ExpressionResult) {
 				final ExpressionResult res = (ExpressionResult) r;
 				resultBuilder.addDeclarations(res.getDeclarations());
+				// TODO Frank: We somehow should not copy the overapproximations here
 				resultBuilder.addStatements(res.getStatements());
+				auxVars = res.getAuxVars();
 				expr = res.getLrValue();
-				// if (!((ExpressionResult) r).getOverapprs().isEmpty()) {
-				// throw new AssertionError("Forgot to pass overapproximation flags to statements: " +
-				// ((ExpressionResult) r).getOverapprs());
-				// }
 			} else if (r.getNode() != null && r.getNode() instanceof Body) {
 				assert false : "should not happen, as CompoundStatement now yields an "
 						+ "ExpressionResult or a CompoundStatementExpressionResult";
@@ -1098,6 +1144,7 @@ public class CHandler {
 				final Body b = (Body) r.getNode();
 				resultBuilder.addDeclarations(Arrays.asList(b.getLocalVars()));
 				resultBuilder.addStatements(Arrays.asList(b.getBlock()));
+				auxVars = Set.of();
 			} else if (r instanceof SkipResult) {
 				// skip
 			} else {
@@ -1114,18 +1161,19 @@ public class CHandler {
 						mMemoryHandler.getReadCall(((HeapLValue) expr).getAddress(), expr.getCType()));
 			} else {
 				final AuxVarInfo auxVarInfo =
-						mAuxVarInfoBuilder.constructAuxVarInfo(loc, expr.getCType(), AUXVAR.NONDET);
-				resultBuilder.addAuxVar(auxVarInfo).addDeclaration(auxVarInfo.getVarDec());
+						mAuxVarInfoBuilder.constructAuxVarInfo(loc, expr.getCType(), AUXVAR.RETURNED);
+				resultBuilder.addAuxVarWithDeclaration(auxVarInfo);
 				resultBuilder.setLrValue(new RValue(auxVarInfo.getExp(), expr.getCType()));
 				resultBuilder.addStatement(
 						StatementFactory.constructSingleAssignmentStatement(loc, auxVarInfo.getLhs(), expr.getValue()));
 			}
 		}
-		if (isNewScopeRequired(parent)) {
+		if (isNewScopeRequired) {
 			updateStmtsAndDeclsAtScopeEnd(resultBuilder, node);
-			addHavocsAtScopeEnd(mLocationFactory.createCLocation(node), node, resultBuilder);
+			addHavocsAtScopeEnd(node, resultBuilder);
 			endScope();
 		}
+		resultBuilder.addStatements(CTranslationUtil.createHavocsForAuxVars(auxVars));
 		return resultBuilder.build();
 	}
 
@@ -1385,25 +1433,30 @@ public class CHandler {
 	}
 
 	public Result visit(final IDispatcher main, final IASTDefaultStatement node) {
-		final ArrayList<Statement> stmt = new ArrayList<>();
-		final ArrayList<Declaration> decl = new ArrayList<>();
-		// final Map<VariableDeclaration, ILocation> emptyAuxVars = new
-		// LinkedHashMap<>(0);
-		final Set<AuxVarInfo> emptyAuxVars = new LinkedHashSet<>(0);
-		final List<Overapprox> overappr = new ArrayList<>();
-		return new ExpressionResult(stmt,
+		return new ExpressionResult(
 				new RValue(ExpressionFactory.createBooleanLiteral(mLocationFactory.createCLocation(node), true),
-						new CPrimitive(CPrimitives.INT)),
-				decl, emptyAuxVars, overappr);
+						new CPrimitive(CPrimitives.INT)));
 	}
 
+	/**
+	 * Translates a do-statement {@code do body while (cond);} to {@code while (true) { body; Label: if (!cond) break;
+	 * }}
+	 *
+	 * @param main
+	 *            dispatcher
+	 * @param node
+	 *            AST node
+	 * @return The do-statement translated to a Boogie-Result
+	 */
 	public Result visit(final IDispatcher main, final IASTDoStatement node) {
-		final ExpressionResult condResult = (ExpressionResult) main.dispatch(node.getCondition());
+		final ILocation loc = mLocationFactory.createCLocation(node);
+		final ExpressionResultBuilder resultBuilder = new ExpressionResultBuilder();
+		final List<Statement> bodyBlock = new ArrayList<>();
 		final String loopLabel = mNameHandler.getGloballyUniqueIdentifier(SFO.LOOPLABEL);
-		mInnerMostLoopLabel.push(loopLabel);
-		final Result bodyResult = main.dispatch(node.getBody());
-		mInnerMostLoopLabel.pop();
-		return handleLoops(main, node, bodyResult, condResult, loopLabel);
+		handleLoopBody(loc, main, node.getBody(), loopLabel, resultBuilder, bodyBlock);
+		bodyBlock.add(new Label(loc, loopLabel));
+		bodyBlock.addAll(handleLoopCondition(loc, main, node.getCondition(), resultBuilder));
+		return buildLoopResult(main, node, bodyBlock, resultBuilder);
 	}
 
 	public Result visit(final IDispatcher main, final IASTEqualsInitializer node) {
@@ -1421,35 +1474,11 @@ public class CHandler {
 	public Result visit(final IDispatcher main, final IASTExpressionStatement node) {
 
 		final Result r = main.dispatch(node.getExpression());
-		if (r instanceof ExpressionResult) {
-			final ExpressionResult rExp = (ExpressionResult) r;
-
-			final ArrayList<Statement> stmt = new ArrayList<>(rExp.getStatements());
-			final ArrayList<Declaration> decl = new ArrayList<>(rExp.getDeclarations());
-			final List<Overapprox> overappr = new ArrayList<>();
-			stmt.addAll(CTranslationUtil.createHavocsForAuxVars(rExp.getAuxVars()));
-			overappr.addAll(rExp.getOverapprs());
-			return new ExpressionResult(stmt, rExp.getLrValue(), decl, Collections.emptySet(), overappr);
+		if (r instanceof ExpressionResult || r instanceof SkipResult) {
+			return r;
 		}
 		if (r instanceof ExpressionListResult) {
-			final ArrayList<Statement> stmt = new ArrayList<>();
-			final ArrayList<Declaration> decl = new ArrayList<>();
-			final List<Overapprox> overappr = new ArrayList<>();
-			// final Map<VariableDeclaration, ILocation> emptyAuxVars = new
-			// LinkedHashMap<>(0);
-			for (final ExpressionResult res : ((ExpressionListResult) r).getList()) {
-				if (!res.getStatements().isEmpty()) {
-					stmt.addAll(res.getStatements());
-					decl.addAll(res.getDeclarations());
-					stmt.addAll(CTranslationUtil.createHavocsForAuxVars(res.getAuxVars()));
-					overappr.addAll(res.getOverapprs());
-				}
-			}
-
-			return new ExpressionResult(stmt, null, decl, Collections.emptySet(), overappr);
-		}
-		if (r instanceof SkipResult) {
-			return r;
+			return new ExpressionResultBuilder().addAllExceptLrValue(((ExpressionListResult) r).getList()).build();
 		}
 		final String msg = "We always convert to AssignmentStatement, other options raise this error!";
 		final ILocation loc = mLocationFactory.createCLocation(node);
@@ -1460,21 +1489,87 @@ public class CHandler {
 		return mStructHandler.handleFieldReference(main, mExprResultTransformer, node);
 	}
 
+	/**
+	 * Translates a for-statement {@code for (init; cond; iterator) body} to {@code while (true) { if (!cond) break;
+	 * body; Label: iterator; }}
+	 *
+	 * @param main
+	 *            dispatcher
+	 * @param node
+	 *            AST node
+	 * @return The for-statement translated to a Boogie-Result
+	 */
 	public Result visit(final IDispatcher main, final IASTForStatement node) {
+		final ILocation loc = mLocationFactory.createCLocation(node);
+		final ExpressionResultBuilder resultBuilder = new ExpressionResultBuilder();
+		beginScope();
+		// Process initializer (insert before the actual loop)
+		final IASTStatement cInitStmt = node.getInitializerStatement();
+		if (cInitStmt != null) {
+			final Result initializer = main.dispatch(cInitStmt);
+			if (initializer instanceof ExpressionResult) {
+				resultBuilder.addAllExceptLrValueAndHavocAux((ExpressionResult) initializer);
+			} else if (initializer instanceof SkipResult) {
+				// This is an empty statement in the C Code. We will skip it
+			} else {
+				throw new UnsupportedSyntaxException(loc,
+						"Uninplemented type of for loop initialization: " + initializer.getClass());
+			}
+		}
+		final List<Statement> bodyBlock =
+				new ArrayList<>(handleLoopCondition(loc, main, node.getConditionExpression(), resultBuilder));
 		final String loopLabel = mNameHandler.getGloballyUniqueIdentifier(SFO.LOOPLABEL);
-		return handleLoops(main, node, null, null, loopLabel);
+		handleLoopBody(loc, main, node.getBody(), loopLabel, resultBuilder, bodyBlock);
+		bodyBlock.add(new Label(loc, loopLabel));
+
+		// Insert the translated iterator at the end of the loop (after the loop label)
+		final IASTExpression cItExpr = node.getIterationExpression();
+		if (cItExpr != null) {
+			final Result iterator = main.dispatch(cItExpr);
+			if (iterator instanceof ExpressionListResult) {
+				for (final ExpressionResult el : ((ExpressionListResult) iterator).getList()) {
+					bodyBlock.addAll(el.getStatements());
+					resultBuilder.addDeclarations(el.getDeclarations());
+					bodyBlock.addAll(CTranslationUtil.createHavocsForAuxVars(el.getAuxVars()));
+				}
+			} else if (iterator instanceof ExpressionResult) {
+				final ExpressionResult iteratorRE = (ExpressionResult) iterator;
+				bodyBlock.addAll(iteratorRE.getStatements());
+				resultBuilder.addDeclarations(iteratorRE.getDeclarations());
+				resultBuilder.addOverapprox(iteratorRE.getOverapprs());
+				bodyBlock.addAll(CTranslationUtil.createHavocsForAuxVars(iteratorRE.getAuxVars()));
+			} else {
+				throw new UnsupportedSyntaxException(loc,
+						"Uninplemented type of loop iterator: " + iterator.getClass());
+			}
+		}
+
+		final ExpressionResultBuilder bodyBlockBuilder = new ExpressionResultBuilder().addStatements(bodyBlock);
+		updateStmtsAndDeclsAtScopeEnd(bodyBlockBuilder, node);
+		endScope();
+		resultBuilder.addDeclarations(bodyBlockBuilder.getDeclarations());
+		return buildLoopResult(main, node, bodyBlockBuilder.getStatements(), resultBuilder);
 	}
 
 	public Result visit(final IDispatcher main, final IASTFunctionCallExpression node) {
 		final IASTExpression functionName = node.getFunctionNameExpression();
+		final ILocation loc = mLocationFactory.createCLocation(node);
 		if (functionName instanceof IASTIdExpression) {
+			// TODO: This is just a workaround for now to crash when thread local variables are used in a concurrent
+			// program
+			if ("pthread_create".equals(((IASTIdExpression) functionName).getName().toString())) {
+				mIsConcurrent = true;
+				// Only crash for thread local variable in concurrent programs
+				if (mHasThreadLocalVars) {
+					throw new UnsupportedSyntaxException(loc, "Thread local variables are not supported yet.");
+				}
+			}
 			final Result standardFunction =
 					mStandardFunctionHandler.translateStandardFunction(main, node, (IASTIdExpression) functionName);
 			if (standardFunction != null) {
 				return standardFunction;
 			}
 		}
-		final ILocation loc = mLocationFactory.createCLocation(node);
 		return mFunctionHandler.handleFunctionCallExpression(main, loc, functionName, node.getArguments(),
 				mMemoryHandler);
 	}
@@ -1496,6 +1591,7 @@ public class CHandler {
 
 		mCurrentDeclaredTypes.pop();
 		assert declResult.getDeclaration().getType() instanceof CFunction;
+		mContract.addAll(main.getFunctionContractFromWitness(node));
 		return mFunctionHandler.handleFunctionDefinition(main, mMemoryHandler, node, declResult.getDeclaration(),
 				mContract, mIsInLibraryMode);
 	}
@@ -1516,8 +1612,6 @@ public class CHandler {
 
 		// Apply multifile input prefixing transformations to the ID
 		final String cId = node.getName().toString();
-		// cIdMp is only relevant for procedures and global variables
-		final String cIdMp = mSymbolTable.applyMultiparseRenaming(node.getContainingFilename(), cId);
 
 		// deal with builtin constants
 		if ("NULL".equals(cId)) {
@@ -1525,45 +1619,19 @@ public class CHandler {
 					new CPointer(new CPrimitive(CPrimitives.VOID))));
 
 		}
-		if ("__PRETTY_FUNCTION__".equals(cId) || "__FUNCTION__".equals(cId)) {
-			// TODO: Was only in SvComp14Handler, but seems useful anywhere
+		if (List.of("__PRETTY_FUNCTION__", "__FUNCTION__", "__func__").contains(cId)) {
 			final CType returnType = new CPointer(new CPrimitive(CPrimitives.CHAR));
-			// final String tId = main.mNameHandler.getTempVarUID(SFO.AUXVAR.NONDET,
-			// returnType);
-			// final VariableDeclaration tVarDecl = new VariableDeclaration(loc, new
-			// Attribute[0], new VarList[] {
-			// new VarList(loc, new String[] { tId },
-			// main.mTypeHandler.constructPointerType(loc)) });
 			final AuxVarInfo auxvar = mAuxVarInfoBuilder.constructAuxVarInfo(loc, returnType, SFO.AUXVAR.NONDET);
 			final RValue rvalue = new RValue(auxvar.getExp(), returnType);
-			final ArrayList<Declaration> decls = new ArrayList<>();
-			decls.add(auxvar.getVarDec());
-			// final Map<VariableDeclaration, ILocation> auxVars = new LinkedHashMap<>();
-			// auxVars.put(auxvar.getVarDec(), loc);
-			return new ExpressionResult(new ArrayList<Statement>(), rvalue, decls, Collections.singleton(auxvar));
+			return new ExpressionResult(List.of(), rvalue, List.of(auxvar.getVarDec()), Set.of(auxvar));
 		}
-		if (!mSymbolTable.containsCSymbol(node, cIdMp)
-				&& ("NAN".equals(cId) || "INFINITY".equals(cId) || "inf".equals(cId))) {
+		final String cIdMp = mSymbolTable.applyMultiparseRenaming(node.getContainingFilename(), cId);
+		if (!mSymbolTable.containsCSymbol(node, cIdMp) && List.of("NAN", "INFINITY", "inf").contains(cId)) {
 			return mExpressionTranslation.createNanOrInfinity(loc, cId);
 		}
 		if (mExpressionTranslation.isNumberClassificationMacro(cId)) {
 			final RValue rvalue = mExpressionTranslation.handleNumberClassificationMacro(loc, cId);
 			return new ExpressionResult(rvalue);
-		}
-		if ("__func__".equals(cId)) {
-			final CType cType = new CPointer(new CPrimitive(CPrimitives.CHAR));
-			// final String tId = mNameHandler.getTempVarUID(SFO.AUXVAR.NONDET, cType);
-			// final VariableDeclaration tVarDecl = new VariableDeclaration(loc, new
-			// Attribute[0],
-			// new VarList[] { new VarList(loc, new String[] { tId },
-			// mTypeHandler.constructPointerType(loc)) });
-			final AuxVarInfo auxvar = mAuxVarInfoBuilder.constructAuxVarInfo(loc, cType, SFO.AUXVAR.NONDET);
-			final RValue rvalue = new RValue(auxvar.getExp(), cType);
-			final ArrayList<Declaration> decls = new ArrayList<>();
-			decls.add(auxvar.getVarDec());
-			// final Map<VariableDeclaration, ILocation> auxVars = new LinkedHashMap<>();
-			// auxVars.put(auxvar.getVarDec(), loc);
-			return new ExpressionResult(new ArrayList<Statement>(), rvalue, decls, Collections.singleton(auxvar));
 		}
 
 		final String bId;
@@ -1606,17 +1674,15 @@ public class CHandler {
 				}
 				return new ExpressionResult(new RValue(stv.getConstantValue(), cType));
 			}
-			// } else if (mFunctionHandler.getProcedures().keySet().contains(cId)) {
 		} else if (mProcedureManager.hasProcedure(cIdMp)) {
-			// C11 6.3.2.1.4 says: A function designator is an expression that
-			// has function type.
+			// C11 6.3.2.1.4 says: A function designator is an expression that has function type.
 			final CFunction cFunction = mProcedureManager.getCFunctionType(cIdMp);
 			cType = cFunction;
 			bId = SFO.FUNCTION_ADDRESS + cIdMp;
 			useHeap = true;
 			intFromPtr = false;
 			declarationInformation = DeclarationInformation.DECLARATIONINFO_GLOBAL;
-		} else if (mFunctionToIndex.containsKey(cIdMp)) {
+		} else if (mFunctions.contains(cIdMp)) {
 			throw new AssertionError("function not known to function handler");
 		} else {
 			throw new UnsupportedSyntaxException(loc,
@@ -1632,15 +1698,13 @@ public class CHandler {
 
 		LRValue lrVal = null;
 		if (useHeap) {
-			final IdentifierExpression idExp = // new IdentifierExpression(loc, bId);
-					ExpressionFactory.constructIdentifierExpression(loc, mTypeHandler.getBoogiePointerType(), bId,
-							declarationInformation);
-			// convention: the ctype in the symbol table of something that we put on the
-			// heap
+			final IdentifierExpression idExp = ExpressionFactory.constructIdentifierExpression(loc,
+					mTypeHandler.getBoogiePointerType(), bId, declarationInformation);
+			// convention: the ctype in the symbol table of something that we put on the heap
 			// is the same as it would be if we did not put it on heap
 			lrVal = LRValueFactory.constructHeapLValue(mTypeHandler, idExp, cType, intFromPtr, null);
 		} else {
-			final VariableLHS idLhs = // new VariableLHS(loc, bId);
+			final VariableLHS idLhs =
 					ExpressionFactory.constructVariableLHS(loc, boogieType, bId, declarationInformation);
 			lrVal = new LocalLValue(idLhs, cType, false, intFromPtr, null);
 		}
@@ -1874,8 +1938,6 @@ public class CHandler {
 		final ILocation loc = mLocationFactory.createCLocation(node);
 		final ArrayList<Statement> stmt = new ArrayList<>();
 		final ArrayList<Declaration> decl = new ArrayList<>();
-		// final Map<VariableDeclaration, ILocation> emptyAuxVars = new
-		// LinkedHashMap<>(0);
 		final List<Overapprox> overappr = new ArrayList<>();
 		final String label = node.getName().toString();
 		stmt.add(new Label(loc, label));
@@ -1933,7 +1995,7 @@ public class CHandler {
 			return new ExpressionResult(rVal);
 		}
 		case IASTLiteralExpression.lk_string_literal:
-			return handleStringLiteralExpression(loc, main, node);
+			return handleStringLiteralExpression(loc, node);
 		case IASTLiteralExpression.lk_false:
 			return new ExpressionResult(
 					new RValue(ExpressionFactory.createBooleanLiteral(loc, false), new CPrimitive(CPrimitives.INT)));
@@ -1951,8 +2013,7 @@ public class CHandler {
 	 * literals are stored in a separate read-only area of the memory. String literals can neither be modified nor
 	 * deallocated.
 	 */
-	private Result handleStringLiteralExpression(final ILocation loc, final IDispatcher main,
-			final IASTLiteralExpression node) {
+	private Result handleStringLiteralExpression(final ILocation loc, final IASTLiteralExpression node) {
 		// Note: We can either use loc here or create a new ignore-loc s.t. the string
 		// literal assignment will not be shown in the backtranslation
 		final ILocation actualLoc = LocationFactory.createIgnoreCLocation(node);
@@ -2048,16 +2109,17 @@ public class CHandler {
 	}
 
 	public Result visit(final IDispatcher main, final IASTProblemDeclaration node) {
-		if (node.getRawSignature().equals("_Noreturn") || node.getRawSignature().equals("noreturn")) {
+		final String signature = node.getRawSignature();
+		if (signature.equals("_Noreturn") || signature.equals("noreturn")) {
 			// Matthias 20230309: It seems like the parser does not support die _Noreturn
 			// function specifier. It considers this as a IASTProblemDeclaration that is a
 			// direct child of the translation unit. As a workaround, we skip this node.
 			return new SkipResult();
-		} else {
-			final ILocation loc = mLocationFactory.createCLocation(node);
-			final String msg = "Syntax error (declaration problem) in C program: " + node.getProblem().getMessage();
-			throw new IncorrectSyntaxException(loc, msg);
+
 		}
+		final ILocation loc = mLocationFactory.createCLocation(node);
+		throw new IncorrectSyntaxException(loc, String.format(
+				"Syntax error (declaration problem) in C program: %s (%s)", node.getProblem().getMessage(), signature));
 	}
 
 	public Result visit(final IDispatcher main, final IASTProblemExpression node) {
@@ -2113,6 +2175,15 @@ public class CHandler {
 			mReporter.warn(loc, msg);
 			return new SkipResult();
 		}
+		// TODO: This is just a workaround for now to crash when thread local variables are used in a concurrent program
+		if (Arrays.stream(node.getDeclSpecifier().getAttributes()).map(x -> String.valueOf(x.getName()))
+				.anyMatch("thread"::equals)) {
+			mHasThreadLocalVars = true;
+			// Only crash for thread local variable in concurrent programs
+			if (mIsConcurrent) {
+				throw new UnsupportedSyntaxException(loc, "Thread local variables are not supported yet.");
+			}
+		}
 
 		// we have an enum declaration
 
@@ -2147,9 +2218,7 @@ public class CHandler {
 		}
 
 		final TypesResult typeResult = (TypesResult) declSpecifierResult;
-		// Skip will be overwritten in
-		// case of a global or a local
-		// initialized variable
+		// Skip will be overwritten in case of a global or a local initialized variable
 
 		final CStorageClass storageClass = scConstant2StorageClass(node.getDeclSpecifier().getStorageClass());
 
@@ -2178,6 +2247,7 @@ public class CHandler {
 					throw new AssertionError("passing side-effects from DeclaratorResults is not yet implemented");
 				}
 
+				mContract.addAll(main.getFunctionContractFromWitness(node));
 				// update functionHandler.procedures instead of symbol table
 				mFunctionHandler.handleFunctionDeclarator(main, mLocationFactory.createCLocation(declarator), mContract,
 						cDec, declarator);
@@ -2242,8 +2312,7 @@ public class CHandler {
 		final AuxVarInfo switchAuxvar = mAuxVarInfoBuilder.constructAuxVarInfo(loc, intType,
 				new PrimitiveType(loc, BoogieType.TYPE_BOOL, SFO.BOOL), SFO.AUXVAR.SWITCH);
 
-		resultBuilder.addDeclaration(switchAuxvar.getVarDec());
-		resultBuilder.addAuxVar(switchAuxvar);
+		resultBuilder.addAuxVarWithDeclaration(switchAuxvar);
 
 		boolean isFirst = true;
 		boolean firstCond = true;
@@ -2254,13 +2323,10 @@ public class CHandler {
 		beginScope();
 		for (final IASTNode child : node.getBody().getChildren()) {
 			if (isFirst && !(child instanceof IASTCaseStatement) && !(child instanceof IASTDefaultStatement)) {
-				// declarations in the beginning of a switch body (i.e. before the first
-				// case/default) are used,
-				// statements are dropped
-				// see example 6.8.4.2-7
+				// declarations in the beginning of a switch body (i.e. before the first case/default) are used,
+				// statements are dropped see example 6.8.4.2-7
 
-				// we need to dispatch the child in order to fill the symbol table with
-				// declarations accordingly
+				// we need to dispatch the child in order to fill the symbol table with declarations accordingly
 				// the result can only contain statements, which we drop.
 				main.dispatch(child);
 
@@ -2320,25 +2386,13 @@ public class CHandler {
 					resultBuilder.addDeclarations(res.getDeclarations());
 					resultBuilder.addAuxVars(res.getAuxVars());
 					resultBuilder.addOverapprox(res.getOverapprs());
-					for (final Statement s : res.getStatements()) {
-						if (s instanceof BreakStatement) {
-							ifBlock.add(new GotoStatement(locC, new String[] { breakLabelName }));
-						} else {
-							ifBlock.add(s);
-						}
-					}
+					ifBlock.addAll(replaceBreaksWithGotos(locC, res.getStatements(), breakLabelName));
 				}
 				if (r.getNode() != null && r.getNode() instanceof Body) {
 					// we already have a unique naming for variables! -> unfold
 					final Body b = (Body) r.getNode();
 					resultBuilder.addDeclarations(Arrays.asList(b.getLocalVars()));
-					for (final Statement s : b.getBlock()) {
-						if (s instanceof BreakStatement) {
-							ifBlock.add(new GotoStatement(locC, new String[] { breakLabelName }));
-						} else {
-							ifBlock.add(s);
-						}
-					}
+					ifBlock.addAll(replaceBreaksWithGotos(locC, Arrays.asList(b.getBlock()), breakLabelName));
 				}
 			}
 		}
@@ -2368,14 +2422,34 @@ public class CHandler {
 		resultBuilder.addStatement(new Label(loc, breakLabelName));
 		resultBuilder.addStatements(CTranslationUtil.createHavocsForAuxVars(resultBuilder.getAuxVars()));
 
-		// Use body as hook: This is the scope holder for switch statements! (as
-		// controller expression is child of the
+		// Use body as hook: This is the scope holder for switch statements! (as controller expression is child of the
 		// switch itself and may not have scope access.)
 		updateStmtsAndDeclsAtScopeEnd(resultBuilder, node.getBody());
 		endScope();
 
 		assert resultBuilder.getLrValue() == null;
 		return resultBuilder.build();
+	}
+
+	private static List<Statement> replaceBreaksWithGotos(final ILocation loc, final Collection<Statement> statements,
+			final String label) {
+		final List<Statement> result = new ArrayList<>(statements.size());
+		for (final Statement st : statements) {
+			if (st instanceof BreakStatement) {
+				result.add(new GotoStatement(loc, new String[] { label }));
+			} else if (st instanceof IfStatement) {
+				final IfStatement ifSt = (IfStatement) st;
+				final Statement[] newThen =
+						replaceBreaksWithGotos(loc, Arrays.asList(ifSt.getThenPart()), label).toArray(Statement[]::new);
+				final Statement[] newElse =
+						replaceBreaksWithGotos(loc, Arrays.asList(ifSt.getElsePart()), label).toArray(Statement[]::new);
+				result.add(new IfStatement(loc, ifSt.getCondition(), newThen, newElse));
+			} else {
+				// TODO: Are there any other statements, where breaks should be replaced?
+				result.add(st);
+			}
+		}
+		return result;
 	}
 
 	public Result visit(final IDispatcher main, final IASTTranslationUnit node) {
@@ -2415,10 +2489,8 @@ public class CHandler {
 		checkForACSL(main, acslResultBuilder, node, null, false);
 		mDeclarations.addAll(acslResultBuilder.getDeclarations());
 
-		// The declarations (which are needed for the caller) are handled as a member as
-		// they
-		// do not consist of a Boogie node.
-		// So as a workaround null is returned here
+		// The declarations (which are needed for the caller) are handled as a member as they do not consist of a Boogie
+		// node. So as a workaround null is returned here
 		return null;
 	}
 
@@ -2497,7 +2569,7 @@ public class CHandler {
 			return handleIndirectionOperator(operand, loc, node);
 		}
 		case IASTUnaryExpression.op_amper: {
-			return handleAddressOfOperator(operand, loc, node);
+			return handleAddressOfOperator(operand, node);
 		}
 		case IASTUnaryExpression.op_alignOf:
 		default:
@@ -2506,13 +2578,24 @@ public class CHandler {
 		}
 	}
 
+	/**
+	 * Translates a while-statement {@code while (cond) body} to {@code while (true) { Label: if (!cond) break; body; }}
+	 *
+	 * @param main
+	 *            dispatcher
+	 * @param node
+	 *            AST node
+	 * @return The while-statement translated to a Boogie-Result
+	 */
 	public Result visit(final IDispatcher main, final IASTWhileStatement node) {
-		final ExpressionResult condResult = (ExpressionResult) main.dispatch(node.getCondition());
+		final ILocation loc = mLocationFactory.createCLocation(node);
+		final ExpressionResultBuilder resultBuilder = new ExpressionResultBuilder();
 		final String loopLabel = mNameHandler.getGloballyUniqueIdentifier(SFO.LOOPLABEL);
-		mInnerMostLoopLabel.push(loopLabel);
-		final Result bodyResult = main.dispatch(node.getBody());
-		mInnerMostLoopLabel.pop();
-		return handleLoops(main, node, bodyResult, condResult, loopLabel);
+		final List<Statement> bodyBlock = new ArrayList<>();
+		bodyBlock.add(new Label(loc, loopLabel));
+		bodyBlock.addAll(handleLoopCondition(loc, main, node.getCondition(), resultBuilder));
+		handleLoopBody(loc, main, node.getBody(), loopLabel, resultBuilder, bodyBlock);
+		return buildLoopResult(main, node, bodyBlock, resultBuilder);
 	}
 
 	public Result visit(final IDispatcher main, final IGNUASTCompoundStatementExpression node) {
@@ -2583,13 +2666,8 @@ public class CHandler {
 	 * <p>
 	 * Background: Array expressions can be used in place of pointer expressions in C. (An array may "decay" to a
 	 * pointer in C standard terminology.) E.g. when an array is assigned to a pointer variable.
-	 *
-	 *
-	 *
-	 * @param rightLrVal
-	 * @return
 	 */
-	public RValue decayArrayLrValToPointer(final ILocation loc, final LRValue rightLrVal, final IASTNode hook) {
+	public RValue decayArrayLrValToPointer(final LRValue rightLrVal, final IASTNode hook) {
 		assert rightLrVal.getCType().getUnderlyingType() instanceof CArray;
 
 		final Expression newValue;
@@ -2606,7 +2684,7 @@ public class CHandler {
 			}
 			// circumvents Boogie type checking during preprocessing
 			newValue = ExpressionFactory.replaceBoogieType(oldValue, mTypeHandler.getBoogiePointerType());
-			moveArrayAndStructIdsOnHeap(loc, rightLrVal.getUnderlyingType(), oldValue, Collections.emptySet(), hook);
+			moveArrayAndStructIdsOnHeap(rightLrVal.getUnderlyingType(), oldValue, hook);
 		} else if (rightLrVal instanceof RValue) {
 			newValue = rightLrVal.getValue();
 		} else {
@@ -2670,7 +2748,7 @@ public class CHandler {
 				if (address instanceof IdentifierExpression) {
 					final String lId =
 							((IdentifierExpression) ((HeapLValue) leftHandSide).getAddress()).getIdentifier();
-					markAsIntFromPointer(loc, lId, hook);
+					markAsIntFromPointer(lId, hook);
 				} else {
 					// TODO
 				}
@@ -2679,7 +2757,7 @@ public class CHandler {
 				final LeftHandSide value = ((LocalLValue) leftHandSide).getLhs();
 				if (value instanceof VariableLHS) {
 					lId = ((VariableLHS) value).getIdentifier();
-					markAsIntFromPointer(loc, lId, hook);
+					markAsIntFromPointer(lId, hook);
 				} else {
 					// TODO
 				}
@@ -2792,12 +2870,12 @@ public class CHandler {
 		}
 	}
 
-	private void addHavocsAtScopeEnd(final ILocation loc, final IASTStatement hook,
-			final ExpressionResultBuilder builder) {
+	private void addHavocsAtScopeEnd(final IASTNode hook, final ExpressionResultBuilder builder) {
 		if (!ADD_HAVOCS_AT_SCOPE_END) {
 			return;
 		}
 		final List<VariableLHS> vars = new ArrayList<>();
+		final ILocation loc = LocationFactory.createIgnoreCLocation(hook);
 		for (final SymbolTableValue stv : mSymbolTable.getInnermostCScopeValues(hook)) {
 			if (!stv.isBoogieGlobalVar() && stv.getBoogieDecl() != null) {
 				final VariableLHS lhs = new VariableLHS(loc, stv.getAstType().getBoogieType(), stv.getBoogieName(),
@@ -2813,11 +2891,7 @@ public class CHandler {
 	/**
 	 * @return true iff this is called while in prerun mode, false otherwise
 	 */
-	public void moveArrayAndStructIdsOnHeap(final ILocation loc, final CType underlyingType, final Expression expr,
-			final Set<AuxVarInfo> auxVars, final IASTNode hook) {
-
-		final IASTNode exprHook = CTranslationUtil.findExpressionHook(hook);
-
+	public void moveArrayAndStructIdsOnHeap(final CType underlyingType, final Expression expr, final IASTNode hook) {
 		if (!mIsPrerun) {
 			if (underlyingType instanceof CArray) {
 				throw new AssertionError("on-heap/off-heap bug: array has to be on-heap");
@@ -2829,11 +2903,10 @@ public class CHandler {
 		for (final String id : bie.getIds()) {
 			final String cid = mSymbolTable.getCIdForBoogieId(id);
 			if (cid == null) {
-				// expression does not have a corresponding c identifier --> nothing to move on
-				// heap
+				// expression does not have a corresponding c identifier --> nothing to move on heap
 				continue;
 			}
-			final SymbolTableValue value = mSymbolTable.findCSymbol(exprHook, cid);
+			final SymbolTableValue value = mSymbolTable.findCSymbol(CTranslationUtil.findExpressionHook(hook), cid);
 			if (value == null) {
 				throw new AssertionError("no entry in symbol table for C-ID " + cid);
 			}
@@ -2890,17 +2963,13 @@ public class CHandler {
 
 		// this is only to have a minimal symbolTableEntry (containing boogieID) for
 		// translation of the initializer
-		mSymbolTable.storeCSymbol(hook, cDec.getName(),
+		mSymbolTable.storeCSymbol(node, cDec.getName(),
 				new SymbolTableValue(bId, null, null, cDec, declarationInformation, hook, false));
 		final InitializerResult initializer = translateInitializer(main, cDec);
 		cDec.setInitializerResult(initializer);
 
-		final ASTType translatedType;
-		if (onHeap) {
-			translatedType = mTypeHandler.constructPointerType(loc);
-		} else {
-			translatedType = mTypeHandler.cType2AstType(loc, cDec.getType());
-		}
+		final ASTType translatedType =
+				onHeap ? mTypeHandler.constructPointerType(loc) : mTypeHandler.cType2AstType(loc, cDec.getType());
 
 		final Declaration boogieDec;
 		final Result result;
@@ -2911,15 +2980,16 @@ public class CHandler {
 
 			mTypeHandler.addDefinedType(bId, new TypesResult(new NamedType(loc, boogieType, cDec.getName(), null),
 					false, false, cDec.getType()));
-			if (cDec.getType().getUnderlyingType().isIncomplete() && !cDec.getType().getUnderlyingType().isVoidType()) {
+			final CType cType = cDec.getType();
+			if (cType.isIncomplete() && !cType.isVoidType()) {
+				final CType underlying = cType.getUnderlyingType();
 				final String identifier;
-				if (cDec.getType().getUnderlyingType() instanceof CStructOrUnion) {
-					identifier = ((CStructOrUnion) cDec.getType().getUnderlyingType()).getName();
-				} else if (cDec.getType().getUnderlyingType() instanceof CEnum) {
-					identifier = ((CEnum) cDec.getType().getUnderlyingType()).getName();
+				if (underlying instanceof CStructOrUnion) {
+					identifier = ((CStructOrUnion) underlying).getName();
+				} else if (underlying instanceof CEnum) {
+					identifier = ((CEnum) underlying).getName();
 				} else {
-					throw new AssertionError(
-							"missing support for global incomplete " + cDec.getType().getUnderlyingType());
+					throw new AssertionError("missing support for global incomplete " + cType);
 				}
 				mTypeHandler.registerNamedIncompleteType(identifier, cDec.getName());
 			}
@@ -3018,7 +3088,7 @@ public class CHandler {
 		// reset the symbol table value with its final contents
 		// TODO: Unnamed struct fields have cDec.getName() == "" ; is this supposed to
 		// happen?
-		mSymbolTable.storeCSymbol(hook, cDec.getName(),
+		mSymbolTable.storeCSymbol(node, cDec.getName(),
 				new SymbolTableValue(bId, boogieDec, translatedType, cDec, declarationInformation, hook, false));
 		return result;
 	}
@@ -3091,18 +3161,7 @@ public class CHandler {
 		return new RValue(convertedValue, new CPointer(lrValue.getCType()));
 	}
 
-	/**
-	 * Whether or not a new Scope should be started for this compound statement.
-	 *
-	 * @param env
-	 *            the environment in which the CompoundStatement is.
-	 * @return whether to open a new scope in the symbol table or not.
-	 */
-	private static boolean isNewScopeRequired(final IASTNode env) {
-		return !(env instanceof IASTForStatement) && !(env instanceof IASTFunctionDefinition);
-	}
-
-	private void moveIdOnHeap(final ILocation loc, final IdentifierExpression idExpr, final IASTNode hook) {
+	private void moveIdOnHeap(final IdentifierExpression idExpr, final IASTNode hook) {
 		final String id = idExpr.getIdentifier();
 		final String cid = mSymbolTable.getCIdForBoogieId(id);
 		final SymbolTableValue value = mSymbolTable.findCSymbol(hook, cid);
@@ -3189,8 +3248,7 @@ public class CHandler {
 				final AuxVarInfo auxVar =
 						mAuxVarInfoBuilder.constructAuxVarInfo(loc, er.getLrValue().getCType(), SFO.AUXVAR.UNION);
 
-				builder.addDeclaration(auxVar.getVarDec());
-				builder.addAuxVar(auxVar);
+				builder.addAuxVarWithDeclaration(auxVar);
 
 				final RValue tmpVarRVal = new RValue(auxVar.getExp(), er.getLrValue().getCType());
 
@@ -3352,7 +3410,7 @@ public class CHandler {
 					String.format("The ghost variable %s shadows another variable.", decl.getIdentifier()));
 		}
 		final String boogieName = SFO.GHOST + decl.getIdentifier();
-		final CPrimitive cType = AcslTypeUtils.translateAcslTypeToCType(decl.getType());
+		final CType cType = AcslTypeUtils.translateAcslTypeToCType(decl.getType());
 		final ASTType astType = mTypeHandler.cType2AstType(loc, cType);
 		final VariableDeclaration boogieDecl = new VariableDeclaration(loc, new Attribute[0],
 				new VarList[] { new VarList(loc, new String[] { boogieName }, astType) });
@@ -3365,16 +3423,16 @@ public class CHandler {
 			final ExpressionResult exprResult = (ExpressionResult) main.dispatch(decl.getExpr(), hook);
 			final ExpressionResult converted = mExprResultTransformer
 					.makeRepresentationReadyForConversionAndRexBoolToInt(exprResult, loc, cType, hook);
-			resultBuilder.addAllExceptLrValue(converted);
 			final VariableLHS lhs =
 					new VariableLHS(loc, mTypeHandler.getBoogieTypeForCType(cType), boogieName, declInfo);
-			final AssignmentStatement assignment =
-					StatementFactory.constructSingleAssignmentStatement(loc, lhs, converted.getLrValue().getValue());
-			mStaticObjectsHandler.addStatementsForUltimateInit(List.of(assignment));
+			final ExpressionResult assignment =
+					makeAssignment(loc, new LocalLValue(lhs, cType, null), List.of(), converted, hook);
+			resultBuilder.addAllExceptLrValueAndStatements(assignment);
+			mStaticObjectsHandler.addStatementsForUltimateInit(assignment.getStatements());
 		}
 	}
 
-	private void markAsIntFromPointer(final ILocation loc, final String lId, final IASTNode hook) {
+	private void markAsIntFromPointer(final String lId, final IASTNode hook) {
 		final String cId4Boogie = mSymbolTable.getCIdForBoogieId(lId);
 		final SymbolTableValue old = mSymbolTable.findCSymbol(hook, cId4Boogie);
 		final SymbolTableValue newSTV = old.createMarkedIsIntFromPointer();
@@ -3424,8 +3482,7 @@ public class CHandler {
 	/**
 	 * Handle the address operator according to Section 6.5.3.2 of C11.
 	 */
-	private Result handleAddressOfOperator(final ExpressionResult er, final ILocation loc, final IASTNode hook)
-			throws AssertionError {
+	private Result handleAddressOfOperator(final ExpressionResult er, final IASTNode hook) throws AssertionError {
 		final RValue rVal;
 		if (er.getLrValue() instanceof HeapLValue) {
 			rVal = ((HeapLValue) er.getLrValue()).getAddressAsPointerRValue(mTypeHandler.getBoogiePointerType());
@@ -3441,9 +3498,9 @@ public class CHandler {
 			final Expression expr = er.getLrValue().getValue();
 			if (expr instanceof IdentifierExpression) {
 				final IdentifierExpression idExpr = (IdentifierExpression) expr;
-				moveIdOnHeap(loc, idExpr, hook);
+				moveIdOnHeap(idExpr, hook);
 			} else {
-				moveArrayAndStructIdsOnHeap(loc, er.getLrValue().getUnderlyingType(), expr, er.getAuxVars(), hook);
+				moveArrayAndStructIdsOnHeap(er.getLrValue().getUnderlyingType(), expr, hook);
 			}
 			rVal = convertToPointerRValue(er.getLrValue(), mTypeHandler.getBoogiePointerType());
 		} else if (er.getLrValue() instanceof RValue) {
@@ -3478,71 +3535,10 @@ public class CHandler {
 				rop.getDeclarations(), rop.getAuxVars(), rop.getOverapprs());
 	}
 
-	/**
-	 * Method that handles loops (for, while, do/while). Each of corresponding visit methods will call this method.
-	 *
-	 * @param main
-	 *            the main IDispatcher
-	 * @param node
-	 *            the node to visit
-	 * @param bodyResult
-	 *            the body component of the corresponding loop
-	 * @param condResult
-	 *            the condition of the loop
-	 * @param loopLabel
-	 * @return a result object holding the translated loop (i.e. a while loop)
-	 */
-	private Result handleLoops(final IDispatcher main, final IASTStatement node, Result bodyResult,
-			ExpressionResult condResult, final String loopLabel) {
-		assert node instanceof IASTWhileStatement || node instanceof IASTDoStatement
-				|| node instanceof IASTForStatement;
-
-		final ILocation loc = mLocationFactory.createCLocation(node);
-
-		final ExpressionResultBuilder resultBuilder = new ExpressionResultBuilder();
-
-		Result iterator = null;
-		if (node instanceof IASTForStatement) {
-			final IASTForStatement forStmt = (IASTForStatement) node;
-			// add initialization for this for loop
-			final IASTStatement cInitStmt = forStmt.getInitializerStatement();
-			if (cInitStmt != null) {
-				beginScope();
-				final Result initializer = main.dispatch(cInitStmt);
-				if (initializer instanceof ExpressionResult) {
-					final ExpressionResult rExp = (ExpressionResult) initializer;
-					resultBuilder.addAllExceptLrValue(rExp);
-				} else if (initializer instanceof SkipResult) {
-					// this is an empty statement in the C Code. We will skip it
-				} else {
-					final String msg = "Uninplemented type of for loop initialization: " + initializer.getClass();
-					throw new UnsupportedSyntaxException(loc, msg);
-				}
-			}
-
-			// translate iterator
-			final IASTExpression cItExpr = forStmt.getIterationExpression();
-			if (cItExpr != null) {
-				iterator = main.dispatch(cItExpr);
-			}
-
-			// translate condition
-			final IASTExpression cCondExpr = forStmt.getConditionExpression();
-			if (cCondExpr != null) {
-				condResult = (ExpressionResult) main.dispatch(cCondExpr);
-			} else {
-				condResult = new ExpressionResult(new RValue(ExpressionFactory.createBooleanLiteral(loc, true),
-						new CPrimitive(CPrimitives.BOOL), true), Collections.emptySet());
-			}
-
-			mInnerMostLoopLabel.push(loopLabel);
-			bodyResult = main.dispatch(forStmt.getBody());
-			mInnerMostLoopLabel.pop();
-		}
-		assert CTranslationUtil.isAuxVarMapComplete(mNameHandler, condResult.getDeclarations(),
-				condResult.getAuxVars());
-
-		List<Statement> bodyBlock = new ArrayList<>();
+	private void handleLoopBody(final ILocation loc, final IDispatcher main, final IASTStatement bodyStmt,
+			final String loopLabel, final ExpressionResultBuilder resultBuilder, final List<Statement> bodyBlock) {
+		mInnerMostLoopLabel.push(loopLabel);
+		final Result bodyResult = main.dispatch(bodyStmt);
 		if (bodyResult instanceof ExpressionResult) {
 			final ExpressionResult re = (ExpressionResult) bodyResult;
 			resultBuilder.addDeclarations(re.getDeclarations());
@@ -3561,109 +3557,47 @@ public class CHandler {
 				throw new UnsupportedSyntaxException(loc, msg);
 			}
 		}
+		mInnerMostLoopLabel.pop();
+	}
 
-		if (node instanceof IASTForStatement) {
-			// add the loop label (continue statements become a jump to the loop label)
-			bodyBlock.add(new Label(loc, loopLabel));
+	private List<Statement> handleLoopCondition(final ILocation loc, final IDispatcher main, final IASTExpression cond,
+			final ExpressionResultBuilder resultBuilder) {
+		if (cond == null) {
+			// If the condition is not present in a for-loop, we can omit the if-statement
+			return List.of();
 		}
+		final ExpressionResult condResult = (ExpressionResult) main.dispatch(cond);
+		assert CTranslationUtil.isAuxVarMapComplete(mNameHandler, condResult.getDeclarations(),
+				condResult.getAuxVars());
+		final ExpressionResult condTransformed =
+				mExprResultTransformer.transformSwitchRexIntToBool(condResult, loc, cond);
+		final List<Statement> result = new ArrayList<>(condTransformed.getStatements());
+		resultBuilder.addDeclarations(condTransformed.getDeclarations());
+		// Insert an if-statement: if (!cond) break;
+		// Make sure to havoc all aux-vars that are created from the translation of cond (in the if and else branches)
+		final Expression negatedCond = ExpressionFactory.constructUnaryExpression(loc,
+				UnaryExpression.Operator.LOGICNEG, condTransformed.getLrValue().getValue());
+		final Statement[] havocs =
+				CTranslationUtil.createHavocsForAuxVars(condTransformed.getAuxVars()).toArray(Statement[]::new);
+		final IfStatement ifStmt = new IfStatement(loc, negatedCond,
+				DataStructureUtils.concat(havocs, new Statement[] { new BreakStatement(loc) }), havocs);
+		condTransformed.getOverapprs().forEach(oa -> oa.annotate(ifStmt));
+		result.add(ifStmt);
+		return result;
+	}
 
-		if (node instanceof IASTForStatement && iterator != null) {
-			// add iterator statements of this for loop
-			if (iterator instanceof ExpressionListResult) {
-				for (final ExpressionResult el : ((ExpressionListResult) iterator).getList()) {
-					bodyBlock.addAll(el.getStatements());
-					resultBuilder.addDeclarations(el.getDeclarations());
-					bodyBlock.addAll(CTranslationUtil.createHavocsForAuxVars(el.getAuxVars()));
-				}
-			} else if (iterator instanceof ExpressionResult) {
-				final ExpressionResult iteratorRE = (ExpressionResult) iterator;
-				bodyBlock.addAll(iteratorRE.getStatements());
-				resultBuilder.addDeclarations(iteratorRE.getDeclarations());
-				resultBuilder.addOverapprox(iteratorRE.getOverapprs());
-				bodyBlock.addAll(CTranslationUtil.createHavocsForAuxVars(iteratorRE.getAuxVars()));
-			} else {
-				final String msg = "Uninplemented type of loop iterator: " + iterator.getClass();
-				throw new UnsupportedSyntaxException(loc, msg);
-			}
-		}
-
-		condResult = mExprResultTransformer.transformSwitchRexIntToBool(condResult, loc, node);
-		resultBuilder.addDeclarations(condResult.getDeclarations());
-		final RValue condRVal = (RValue) condResult.getLrValue();
-		IfStatement ifStmt;
-		{
-			final Expression cond = ExpressionFactory.constructUnaryExpression(loc, UnaryExpression.Operator.LOGICNEG,
-					condRVal.getValue());
-			final ArrayList<Statement> thenStmt =
-					new ArrayList<>(CTranslationUtil.createHavocsForAuxVars(condResult.getAuxVars()));
-			thenStmt.add(new BreakStatement(loc));
-			final Statement[] elseStmt =
-					CTranslationUtil.createHavocsForAuxVars(condResult.getAuxVars()).toArray(new Statement[0]);
-			ifStmt = new IfStatement(loc, cond, thenStmt.toArray(new Statement[thenStmt.size()]), elseStmt);
-		}
-
-		if (node instanceof IASTWhileStatement || node instanceof IASTForStatement) {
-			bodyBlock.add(0, ifStmt);
-			bodyBlock.addAll(0, condResult.getStatements());
-			if (node instanceof IASTWhileStatement) {
-				bodyBlock.add(0, new Label(loc, loopLabel));
-			}
-		} else if (node instanceof IASTDoStatement) {
-			bodyBlock.add(new Label(loc, loopLabel));
-			bodyBlock.addAll(condResult.getStatements());
-			bodyBlock.add(ifStmt);
-		}
-
-		LoopInvariantSpecification[] spec;
-		if (mContract == null) {
-			spec = new LoopInvariantSpecification[0];
-		} else {
-			final List<LoopInvariantSpecification> specList = new ArrayList<>();
-			if (node instanceof IASTForStatement || node instanceof IASTWhileStatement
-					|| node instanceof IASTDoStatement) {
-				for (int i = 0; i < mContract.size(); i++) {
-					// retranslate ACSL specification needed e.g., in cases
-					// where ids of function parameters differ from is in ACSL
-					// expression
-					final Result retranslateRes = main.dispatch(mContract.get(i), node);
-					if (retranslateRes instanceof ContractResult) {
-						final ContractResult resContr = (ContractResult) retranslateRes;
-						assert resContr.getSpecs().length == 1;
-						for (final Specification cSpec : resContr.getSpecs()) {
-							specList.add((LoopInvariantSpecification) cSpec);
-						}
-					} else {
-						specList.add((LoopInvariantSpecification) retranslateRes.getNode());
-					}
-				}
-			}
-			spec = specList.toArray(new LoopInvariantSpecification[specList.size()]);
-			// take care for behavior and completeness
-			clearContract();
-		}
-
-		// bit of a workaround using an extra builder here..
-		final ExpressionResultBuilder bodyBlockResultBuilder = new ExpressionResultBuilder();
-		bodyBlockResultBuilder.addStatements(bodyBlock);
-
-		if (node instanceof IASTForStatement && ((IASTForStatement) node).getInitializerStatement() != null) {
-			updateStmtsAndDeclsAtScopeEnd(bodyBlockResultBuilder, node);
-			endScope();
-
-			resultBuilder.addDeclarations(bodyBlockResultBuilder.getDeclarations());
-			bodyBlock = bodyBlockResultBuilder.getStatements();
-		}
-
-		final ILocation ignoreLocation = LocationFactory.createIgnoreCLocation(node);
-		final WhileStatement whileStmt =
-				new WhileStatement(ignoreLocation, ExpressionFactory.createBooleanLiteral(ignoreLocation, true), spec,
-						bodyBlock.toArray(new Statement[bodyBlock.size()]));
+	private Result buildLoopResult(final IDispatcher main, final IASTStatement node, final List<Statement> bodyBlock,
+			final ExpressionResultBuilder resultBuilder) {
+		final LoopInvariantSpecification[] spec = extractLoopInvariants(main, node);
+		final ILocation loc = LocationFactory.createIgnoreCLocation(node);
+		final WhileStatement whileStmt = new WhileStatement(loc, ExpressionFactory.createBooleanLiteral(loc, true),
+				spec, bodyBlock.toArray(Statement[]::new));
 		resultBuilder.getOverappr().stream().forEach(a -> a.annotate(whileStmt));
 		resultBuilder.addStatement(whileStmt);
 
 		if (node instanceof IASTForStatement) {
-			// Havoc all variables that are declared in the loop (including the initializer) afterwards
-			addHavocsAtScopeEnd(loc, node, resultBuilder);
+			// Havoc variables declared in the initializer after the loop
+			addHavocsAtScopeEnd(node, resultBuilder);
 		}
 
 		assert resultBuilder.getLrValue() == null : "there is an lrvalue although there should be none";
@@ -3675,4 +3609,25 @@ public class CHandler {
 		return main.transformWithWitness(node, result);
 	}
 
+	private LoopInvariantSpecification[] extractLoopInvariants(final IDispatcher main, final IASTStatement node) {
+		if (mContract == null || mContract.isEmpty()) {
+			return new LoopInvariantSpecification[0];
+		}
+		final List<LoopInvariantSpecification> spec = new ArrayList<>();
+		for (final ACSLNode acsl : mContract) {
+			final Result res = main.dispatch(acsl, node);
+			if (res instanceof ContractResult) {
+				final ContractResult resContr = (ContractResult) res;
+				assert resContr.getSpecs().length == 1;
+				for (final Specification cSpec : resContr.getSpecs()) {
+					spec.add((LoopInvariantSpecification) cSpec);
+				}
+			} else {
+				spec.add((LoopInvariantSpecification) res.getNode());
+			}
+		}
+		// take care for behavior and completeness
+		clearContract();
+		return spec.toArray(LoopInvariantSpecification[]::new);
+	}
 }
